--- a/lesson.html
+++ b/lesson.html
@@ -17,11 +17,9 @@
 </p>
 <hr>
 <p>ознакомьтесь с условиями:</p>
-<ol>
-    <b>
-        <a href="#" target="_blank"><li>Как офрмить заказ</li></a>
-            <a href="#" target="_blank"><li>Способы доставки</li></a>
-                <a href="#" target="_blank"><li>Оплата и доставка</li></a>
-    </b>
+<ol type="I">
+        <li><a href="#" target="_blank"><>Как офрмить заказ</a></li>
+        <li><a href="#" target="_blank"><li>Способы доставки</a></li>
+        <li><a href="#" target="_blank"><li>Оплата и доставка</a></li>
 </ol>
 <p>И помните, что: "Многие люди терпят неудачу только потому , что сдаются в двух шагах от успеха</p>
