--- a/lesson.html
+++ b/lesson.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Work</title>
+    <link rel="stylesheet" href="CSS/main.css">
 </head>
 <h1>Заказы</h1>
 <p>на этой странице выводятся заказы, оплаченные за год:</p>
@@ -18,8 +19,8 @@
 <hr>
 <p>ознакомьтесь с условиями:</p>
 <ol type="I">
-        <li><a href="#" target="_blank"><>Как офрмить заказ</a></li>
+        <li><a href="#" target="_blank"><li>Как офрмить заказ</a></li>
         <li><a href="#" target="_blank"><li>Способы доставки</a></li>
         <li><a href="#" target="_blank"><li>Оплата и доставка</a></li>
 </ol>
-<p>И помните, что: "Многие люди терпят неудачу только потому , что сдаются в двух шагах от успеха</p>
+<q>И помните, что: "Многие люди терпят неудачу только потому , что сдаются в двух шагах от успеха</q>
