--- a/semantic.html
+++ b/semantic.html
@@ -49,7 +49,7 @@
             <li><a href="#">Contact</a></li>
         </ul>
     </header>
-    <aside class="box">
+    <div class="box">
         <aside class="aside">
             <h3>Последний пост Telegram:</h3>
             <p>
@@ -83,7 +83,7 @@
                 <a href="#">Читать далее</a>
             </article>
         </main>
-    </aside>
+    </div>
     
     <footer>
         <p>&copy; Обучение по профессии Верстальщик от Annblok</p>
