--- a/lesson.html
+++ b/lesson.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html> 
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Work</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="CSS/main.css">
 </head>
+<body>
 <h1>Заказы</h1>
 <p>на этой странице выводятся заказы, оплаченные за год:</p>
-<p>
     <ul>
         <li>Appple Pencil</li>
         <li>Macbook Pro</li>
         <li>iPad Mini</li>
     </ul>
-</p>
 <hr>
 <p>ознакомьтесь с условиями:</p>
-<ol type="I">
-        <li><a href="#" target="_blank"><li>Как офрмить заказ</a></li>
-        <li><a href="#" target="_blank"><li>Способы доставки</a></li>
-        <li><a href="#" target="_blank"><li>Оплата и доставка</a></li>
+<ol>
+        <li><a href="#">Как офрмить заказ</a></li>
+        <li><a href="#">Способы доставки</a></li>
+        <li><a href="#">Оплата и доставка</a></li>
 </ol>
 <q>И помните, что: "Многие люди терпят неудачу только потому , что сдаются в двух шагах от успеха</q>
+</body>
