--- a/semantic.html
+++ b/semantic.html
@@ -4,11 +4,14 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
         <title>Document</title>
-        <link rel="stylesheet" href="css/test.css"
+       <link rel="stylesheet" href="./CSS/test.css">
     </head>
 <body>
-    <div class="header" class="box box-px">
+    <div class="header box box-px" >
         <a href="#" class="logo">LOGO</a>
         <nav>
             <ul>
@@ -55,9 +58,9 @@
         </main>
     </div>
 
-    <footer>
+    <footer class="footer">
         <p>&copy; Обучение по профессии Верстальщик от Annblok</p> 
-        <link rel="stylesheet" href="css/test.css"
+        
     </footer>
 </body>
 </html>
