--- a/semantic.html
+++ b/semantic.html
@@ -8,6 +8,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
         <title>Document</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
        <link rel="stylesheet" href="./CSS/test.css">
     </head>
 <body>
@@ -56,6 +57,7 @@
                 <a href="#">Читать далее</a>
             </article>
         </main>
+        <link rel="stylesheet" href="./CSS/test.css">
     </div>
 
     <footer class="footer">
