--- a/semantic.html
+++ b/semantic.html
@@ -12,7 +12,7 @@
        <link rel="stylesheet" href="./CSS/test.css">
     </head>
 <body>
-    <div class="header box box-px" >
+    <header class="header">
         <a href="#" class="logo">LOGO</a>
         <nav>
             <ul>
@@ -22,7 +22,7 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
-    </div>
+    </header>
     <div class="box">
         <aside class="aside">
             <h3>Последний пост Telegram:</h3>
@@ -57,7 +57,6 @@
                 <a href="#">Читать далее</a>
             </article>
         </main>
-        <link rel="stylesheet" href="./CSS/test.css">
     </div>
     
     <footer class="footer">
