--- a/semantic.html
+++ b/semantic.html
@@ -38,15 +38,15 @@
                <h1>Результаты поиска по слову "вёрстка"</h1>
             <section>
                 <h3>Вёрстка сайтов под ключ</h3>
-                <p>Мы создаем сайты за 1 месяц и дарим логотип в подарок <ul class="link"><a href="#">Далее</a></ul></p>
+                <p>Мы создаем сайты за 1 месяц и дарим логотип в подарок.> <a class="link" href="#">Далее</a></p>
             </section>
             <section>
                 <h3>Научись верстать сайты быстро!</h3>
-                <p>Подробный обучающий курс для новичков. Учим за 3 месяца. <ul class="link"><a href="#">Далее</a></ul></p>
+                <p>Подробный обучающий курс для новичков. Учим за 3 месяца.><a class="link" href="#">Далее</a></p>
             </section>
             <section>
                 <h3>Отмечаем ровно один год!</h3>
-                <p>Наша школа за этот год обучила вёрстке уже 1000 студентов! <ul class="link"><a href="#">Далее</a></ul></p>
+                <p>Наша школа за этот год обучила вёрстке уже 1000 студентов!><a class="link" href="#">Далее</a></p>
             </section>
             <hr>
             <h2>Полезная статья:</h2>
@@ -58,7 +58,6 @@
             </article>
         </main>
     </div>
-    
     <footer class="footer">
         <p>&copy; Обучение по профессии Верстальщик от Annblok</p> 
         
